plugins {
    id 'java'
}

group 'com.alliander.equigy'
version '0.1.0'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.sharegov:mjson:1.4.1'

    testCompile 'com.github.tomakehurst:wiremock-jre8:2.27.2'
    testCompile 'junit:junit:4.12'
    testCompile 'org.assertj:assertj-core:3.12.2'
}
